dimagi-SalesforceFB/src/objects/Pipeline_Snapshot__c.object
<CustomObject>
    <description>Used to store historic pipeline information for pipeline reporting. Automatically populated each month.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Minus_Expense_Income__c</fullName>
        <label>Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount at the time of the snapshot.

For Opportuity:  Amount = Opp Amount
For Closed Contract: Amount = Total Amount of Contract
For Outstanding Contract: Total Amount Remaining</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommCare__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommCare&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommCare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommConnect__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommConnect&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommConnect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommTrack__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;CommTrack&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommTrack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <formula>MONTH( Contract_End_Date__c ) + (12 * YEAR(Contract_End_Date__c))  - MONTH( Contract_Start_Date__c ) - (12*YEAR(Contract_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract End Date - Contract Start Date</inlineHelpText>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expense_Income__c</fullName>
        <label>Contract Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Non_Expense_Income_BUDGET__c</fullName>
        <label>Contract Total Non Expense Income BUDGET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Non_Expense_Income_Rmg__c</fullName>
        <label>Contract Total Non Expense Income Rmg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Pipeline Snapshots</relationshipLabel>
        <relationshipName>Pipeline_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_18_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;), Opportunity__r.X18_Month_Cash_EV__c , Contract__r.X18_Month_Cash_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 18 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_24_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;), Opportunity__r.X24_Month_Cash_EV__c , Contract__r.X24_Month_Cash_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 24 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_3Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;),  Opportunity__r.Three_Month_EV__c ,  Contract__r.Three_Month_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 3Month Cash EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Source_Type__c,&apos;Contract&apos;), IF( ISPICKVAL(Stage__c, &apos;Closed&apos;),  Contract__r.Total_Amount_of_Contract__c ,  Contract__r.Total_Amount_REMAINING__c ),  Opportunity__r.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Channel__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  TEXT(Contract__r.Channel__c)  , TEXT(Opportunity__r.Channel_Response__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Current Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_End_Date__c</fullName>
        <formula>Contract__r.Contract_End_Date__c</formula>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Start_Date__c</fullName>
        <formula>Contract__r.Contract_Start_Date__c</formula>
        <label>Current Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Country_Text__c ,  Opportunity__r.Country_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Duration__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Duration_months__c ,  Opportunity__r.Duration_months__c )</formula>
        <label>Current Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Execution_Date__c</fullName>
        <formula>Contract__r.Date_of_Contract_Execution__c</formula>
        <label>Current Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Execution_Owner_BU__c</fullName>
        <description>For contract - shows the Execution Owner (BU). For opportunity, shows the Execution Owner (BU).</description>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),    Contract__r.Prime_Contracting_Business_Unit__r.Name  ,   Opportunity__r.Implementing_Business_Unit__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For contract - shows the Execution Owner (BU). For opportunity, shows the Execution Owner (BU).</inlineHelpText>
        <label>Current Execution Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Expected_Value__c</fullName>
        <formula>if(ISPICKVAL( Source_Type__c , &apos;Opportunity&apos;),  Opportunity__r.Expected_Value__c ,  Contract__r.Total_Amount_REMAINING__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Expected Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Implementation_Type__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;), TEXT(Contract__r.Implementation_Type__c) , TEXT(Opportunity__r.Implementation_Type__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Intracompany_Subcontract__c</fullName>
        <formula>TEXT( Contract__r.Intracompany_Sub_contract__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Intracompany Subcontract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner_BU__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),   Contract__r.Contracting_Business_Unit__r.Name ,  Opportunity__r.Opportunity_Owning_Entity__r.Name )</formula>
        <label>Current Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;),
 Opportunity__r.Owner.Alias,
  Contract__r.Owner:User.Alias )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Parent_Contract_Execution_Owner__c</fullName>
        <formula>Contract__r.Parent_Contract__r.Prime_Contracting_Business_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Parent Contract Execution Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Probability__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Opportunity&apos;), Opportunity__r.Probability , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Products__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;),  Contract__r.Product_Text__c ,  Opportunity__r.Product_Text__c )</formula>
        <label>Current Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RFP_Response__c</fullName>
        <formula>TEXT(Opportunity__r.Channel_Response__c)</formula>
        <label>Current RFP Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <formula>IF(ISPICKVAL( Source_Type__c , &apos;Contract&apos;), &apos;Closed&apos;,  TEXT(Opportunity__r.StageName ))</formula>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Twelve_Month_Cash_EV__c</fullName>
        <formula>if ( ISPICKVAL(Source_Type__c, &apos;Opportunity&apos;),  Opportunity__r.Twelve_Month_EV__c ,  Contract__r.Twelve_Month_EV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current 12Month Cash EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_months__c</fullName>
        <inlineHelpText>The Duration at the time the snapshot was taken.

Opps: entered on opportunity manually
Contracts: End Date - Start Date</inlineHelpText>
        <label>Duration (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Value_Minus_Expense__c</fullName>
        <formula>Amount_Minus_Expense_Income__c * Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value Minus Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <formula>Amount__c * Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Expected Value at the time the snapshot was taken. ( EV = Amount * Probability)</inlineHelpText>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunity_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intracompany_Sub_contract__c</fullName>
        <label>Intracompany Sub-contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <inlineHelpText>The month of this snapshot.</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Minus_Expense_Income__c</fullName>
        <label>Opportunity Amount Minus Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Duration__c</fullName>
        <inlineHelpText>The duration of the opportunity.</inlineHelpText>
        <label>Opportunity Duration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expense_Income__c</fullName>
        <label>Opportunity Expense Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Product__c</fullName>
        <formula>IF(CONTAINS( Products__c , &apos;Other (Product)&apos;),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other (Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity Owner (different from Execution Owner and Contract Owner)</inlineHelpText>
        <label>Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Pipeline Snapshots</relationshipLabel>
        <relationshipName>Opportunity_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>The probability at the time the snapshot was taken.  (Contracts = 100%)</inlineHelpText>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Big_Three__c</fullName>
        <formula>If( CONTAINS(Products__c , &quot;CommCare&quot;), 
	&quot;CommCare&quot;, 
	if(CONTAINS(Products__c,&quot;CommConnect&quot;),
		&quot;CommConnect&quot;, 
		if(CONTAINS(Products__c,&quot;CommTrack&quot;), 
			&quot;CommTrack&quot;,
			&quot;Other&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product (Big Three)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Response__c</fullName>
        <label>RFP Response</label>
        <picklist>
            <picklistValues>
                <fullName>Non-RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime-RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <inlineHelpText>Did this come from a contract or an opportunity?</inlineHelpText>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1 - Connect</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Talking</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Prospect</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4 - Proposal Development</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 5 - Submitted</fullName>
                <color>#BBBBBB</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 6 - In Negotiations</fullName>
                <color>#999999</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding Contracted</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cash on Hand</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Predicted pipeline</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Core run rate</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Three_Month_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 3) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 3) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 3 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 4), 
Amount__c, 
(3 * Amount__c) / 
(
  (month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The 3 Month projection for the 3 months following the date the snapshot was taken.</inlineHelpText>
        <label>3Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_REMAINING__c</fullName>
        <inlineHelpText>Maps to Total Amount REMAINING on the contract object.</inlineHelpText>
        <label>Contract Amount REMAINING</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twelve_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 12) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 12) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 12 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 13), 
Amount__c, 
(12 * Amount__c) / 
(
  (month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X12_Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 12) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 12) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c),  Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c  / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 12 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 13), 
 Amount_Minus_Expense_Income__c , 
(12 *  Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12 Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 18) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 18) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 18 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 19), 
Amount__c, 
(18 * Amount__c) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Month_Cash_Minus_Expenses_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 18) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 18) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 18 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 19), 
Amount_Minus_Expense_Income__c , 
(18 * Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Month Cash Minus Expenses Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 24) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 24) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 24 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 25), 
Amount__c, 
(24 * Amount__c) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 24) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 24) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 24 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 25), 
Amount_Minus_Expense_Income__c , 
(24 * Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 3) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 3) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
 Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c  / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 3 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 4), 
 Amount_Minus_Expense_Income__c , 
(3 *  Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pipeline Snapshot</label>
    <listViews>
        <fullName>Cash_predicted_and_core_run_rate_snaps</fullName>
        <columns>NAME</columns>
        <columns>X12_Month_Cash_Minus_Expense_Income_EV__c</columns>
        <columns>X3Month_Cash_Minus_Expense_Income_EV__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Duration_months__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Cash on Hand,Predicted pipeline,Core run rate</value>
        </filters>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>6/30/2014</value>
        </filters>
        <label>Cash, predicted and core run rate snaps</label>
    </listViews>
    <listViews>
        <fullName>January_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>January Snapshots</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_closed</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Month_Date__c</columns>
        <columns>Contract__c</columns>
        <columns>Current_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Probability__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>Current_Intracompany_Subcontract__c</columns>
        <columns>Intracompany_Sub_contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:28</value>
        </filters>
        <label>Last month&apos;s closed</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_outstanding</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Contract__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Probability__c</columns>
        <columns>Current_Owner_BU__c</columns>
        <columns>Current_Intracompany_Subcontract__c</columns>
        <columns>Intracompany_Sub_contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Outstanding Contracted</value>
        </filters>
        <label>Last month&apos;s outstanding</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_snapshots</fullName>
        <columns>NAME</columns>
        <columns>Month_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Source_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Twelve_Month_Cash_EV__c</columns>
        <columns>Probability__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>Duration_months__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:28</value>
        </filters>
        <label>Last month&apos;s snapshots</label>
    </listViews>
    <listViews>
        <fullName>Passthrough_to_update</fullName>
        <columns>NAME</columns>
        <columns>Source_Type__c</columns>
        <columns>Month_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Minus_Expense_Income__c</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SBIR,motech,dhis2,screenflow II,SBIR Phase II,gates big proposal</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>technology,scale,business,partners</value>
        </filters>
        <label>Passthrough to update</label>
    </listViews>
</CustomObject>